# py-hypellm

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
src/hypellm/: __init__.py  helpers.py  recipes.py  settings.py  types.py
src/hypellm/impl/: __init__.py
src/hypellm/impl/dspy/: __init__.py  base.py  inferred.py  questions.py  reasoned.py
src/hypellm/impl/instructor/: __init__.py  base.py  inferred.py  questions.py  reasoned.py
tests/: conftest.py  test_helpers.py  test_recipes.py  test_types.py
tests/helpers/: mock_impl.py
tests/impl/: test_instructor.py
